--- a/package.json
+++ b/package.json
@@ -43,8 +43,6 @@
     ]
   },
   "devDependencies": {
-    "@commitlint/cli": "^12.1.1",
-    "@commitlint/config-conventional": "^12.1.1",
     "eslint-config-prettier": "^8.1.0",
     "husky": "^6.0.0",
     "lint-staged": "^10.5.4",
@@ -52,8 +50,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "lint-staged",
-      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+      "pre-commit": "lint-staged"
     }
   },
   "lint-staged": {
